--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,7 +16,7 @@ body {
 }
 
 h1, h2, h3, h4, h5 {
-    color: #004682;
+    color: #000000;
 }
 
 textarea {
@@ -83,10 +83,11 @@ textarea {
 
 .navbar-nav .nav-link, .navbar-nav .nav-link-report, .navbar-nav .nav-label {
     padding: 3vh 2vw!important;
+    color: #2a3136;
 }
 
 .dropdown-menu {
-    background: #004682!important;
+    background: #2a3136!important;
     border-radius: 0!important;
     padding:0!important;
 }
@@ -231,7 +232,7 @@ textarea {
 
 .createreport-left {
     width: 70%;
-    float: left;
+    margin: auto;
 }
 
 .createreport-right {
