Klein updatje weer

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -12,7 +12,7 @@ body {
 
 ::-webkit-scrollbar-thumb
 {
-	background-color: #004682;
+	background-color: #2a3136;
 }
 
 h1, h2, h3, h4, h5 {
@@ -26,7 +26,7 @@ textarea {
 }
 
 .bg-custom {
-    background: #004682;
+    background: #2a3136;
 }
 
 .navbar-custom {
@@ -78,7 +78,7 @@ textarea {
 }
 
 .navbar-custom .nav-link-report:hover {
-    color: #015ba8!important;
+    color: #2a3136!important;
 }
 
 .navbar-nav .nav-link, .navbar-nav .nav-link-report, .navbar-nav .nav-label {
@@ -154,7 +154,7 @@ textarea {
 
 .panel-item {
     padding: 1vh 1vw;
-    background: #004682;
+    background: #2a3136;
     color: #ffffff!important;
     border-radius: 5px;
     margin-bottom: 1vh;
@@ -203,26 +203,26 @@ textarea {
 
 .btn-police {
     width: 100%;
-    background: #004682!important;
+    background: #2a3136!important;
     border: 0 solid transparent!important;
     transition: background 500ms;
 }
 
 .btn-police:hover {
     width: 100%;
-    background: #0066bd!important;
+    background: #2a3136!important;
     border: 0 solid transparent!important;
 }
 
 .btn-pol {
     color: #ffffff!important;
-    background: #004682!important;
+    background: #2a3136!important;
     border: 0 solid transparent!important;
     transition: background 500ms;
 }
 
 .btn-pol:hover {
-    background: #0066bd!important;
+    background: #2a3136!important;
     border: 0 solid transparent!important;
 }
 
@@ -242,7 +242,7 @@ textarea {
 }
 
 .added-laws {
-    border: 1px solid #004682;
+    border: 1px solid #2a3136;
     height: 70vh;
     max-height: 50vh;
     overflow: auto;
@@ -251,17 +251,17 @@ textarea {
 
 .report-law-item {
     padding: 1vh 1vw;
-    background: #004682;
+    background: #2a3136;
     color: #ffffff!important;
     transition: background 500ms;
     float: right;
     width:100%;
-    border: 1px solid #015ba8;
+    border: 1px solid #2a3136;
 }
 
 .report-law-item:hover {
     cursor: pointer;
-    background: #0066bd;
+    background: #2a3136;
 }
 
 .report-law-item .lawlist-title {
@@ -284,18 +284,18 @@ textarea {
 
 .report-law-item-tab {
     padding: 1vh 1vw;
-    background: #004682;
+    background: #2a3136;
     color: #ffffff!important;
     transition: background 500ms;
     width: 25%;
     height: 100px;
     float: left;
-    border: 1px solid #015ba8;
+    border: 1px solid #2a3136;
 }
 
 .report-law-item-tab:hover {
     cursor: pointer;
-    background: #0066bd;
+    background: #2a3136;
 }
 
 .report-law-item-tab .lawlist-title {
@@ -323,7 +323,7 @@ textarea {
 .report-show {
     margin-top: 4vh;
     padding: 10px 20px;
-    border: 1px solid #004682;
+    border: 1px solid #2a3136;
 }
 
 .laws-added {
@@ -355,7 +355,7 @@ textarea {
 
 .warrant-item {
     padding: 1vh 1vw;
-    background: #004682;
+    background: #2a3136;
     color: #ffffff!important;
     border-radius: 2px;
     margin-bottom: 1vh;
@@ -365,7 +365,7 @@ textarea {
 
 .warrant-item:hover {
     cursor: pointer;
-    background: #0066bd;
+    background: #2a3136;
 }
 
 .warrant-list a {
