--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 
 :root{
     --sidebar-color: #FFF;
-    --primary-color: #695CFE;
+    --primary-color: #494949;
     --primary-color-light: #F6F5FF;
     --toggle-color: #DDD;
     --text-color: #707070;
