--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,7 +194,7 @@ body.dark .sidebar header .toggle{
 }
 body.dark .sidebar li a:hover .icon,
 body.dark .sidebar li a:hover .text{
-    color: var(--text-color);
+    color: var(--pr-color);
 }
 
 .sidebar .menu-bar{
@@ -294,3 +294,5 @@ body.dark .switch::before{
 body.dark .home .text{
     color: var(--text-color);
 }
+
+/* Kaki man gekke dropdowntje */
