Knopjes maar afgeronde hoekkies

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -227,6 +227,11 @@ textarea {
     border: 0 solid transparent!important;
 }
 
+
+.btn {
+    border-radius: 40px;
+}
+
 .btn-panel {
     width: 100%;
 }
