--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -202,6 +202,10 @@ textarea {
     font-size: 12px;
 }
 
+.menu-links {
+    left: -10px!important;
+}
+
 .btn-police {
     width: 100%;
     background: #2a3136!important;
@@ -214,6 +218,20 @@ textarea {
     background: #2a3136!important;
     border: 0 solid transparent!important;
 }
+
+.opzoekendrop {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  
+  
+  .opzoeken:hover .dropdown-content {display: block;}
+  
 
 .btn-pol {
     color: #ffffff!important;
