--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -214,12 +214,28 @@ textarea {
 
 .panel-item .panel-title {
     color: #ffffff!important;
-    font-size: 20px;
 }
 
 .panel-title {
-    margin-top: 60px;
+
     float: left;
+    
+}
+
+.panel-titlepro {
+    float: left;
+    margin-top: 50px;
+    color: white;
+}
+
+.panel-titlelinks {
+    color: #ffffff!important;
+    font-size: 20px;
+    float: left;
+}
+
+.panel-authorlinks {
+    float: right;
 }
 
 .panel-item .panel-person {
