--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 @keyframes loading {
     from {transform: scale(0.9);}
@@ -7,7 +8,7 @@
 
 body {
     padding-top: 5rem;
-    font-family: 'Roboto Mono', monospace!important;
+    font-family: 'Poppins', sans-serif!important;
     animation-name: loading;
     animation-duration: 0.4s;
 }
