Menu hoe het moet worden in createprofile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -235,8 +235,7 @@ textarea {
 }
 
 .newrapportbtn {
-    float: left;
-    margin-left: -340px!important;
+    float: left!important;
     margin-top: 17px!important;
 }
 
