--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -234,6 +234,11 @@ textarea {
 
 }
 
+.leidingcenter {
+    margin-left: 37%!important;
+}
+
+
 .newrapportbtn {
     float: left!important;
     margin-top: 17px!important;
