--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,7 +57,7 @@ body.dark{
     width: 88px;
 }
 
-.sidebar li{
+.sidebar li {
     height: 50px;
     list-style: none;
     display: flex;
@@ -71,7 +71,7 @@ body.dark{
     border-radius: 6px;
 }
 
-.sidebar .icon{
+.sidebar .icon, .bx-bx-wallet-icon{
     min-width: 60px;
     border-radius: 6px;
     height: 100%;
