--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -238,6 +238,25 @@ textarea {
     margin-left: 37%!important;
 }
 
+.donkerwit {
+    margin-left: -5%!important;
+}
+
+.moon {
+    float: right!important;
+    margin-left: -5%!important;
+}
+
+.sun {
+    float: right!important;
+    margin-left: -5%!important;
+
+}
+
+.donkerlicht {
+    margin-left: -5%!important;
+
+}
 
 .newrapportbtn {
     float: left!important;
