--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,7 +31,12 @@ body.dark{
     --primary-color-light: #3a3b3c;
     --toggle-color: #fff;
     --text-color: #ccc;
-    background-color: #0d0d0d;
+    --background-color:#ccc;
+    background-color: #141414;
+}
+
+.report-description {
+    color: var(--text-color)!important;
 }
 
 .h3text, .p1text, .panel-container-title, .nopersp2text, .h3profile, .pprofile {
