--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,17 @@ body.dark{
     color: var(--always-white);
 }
 
+.name {
+    margin-left: 20px!important;
+}
+
+.profession {
+    margin-left: 20px!important;
+
+}
+
+
+
  .sidebar{
     position: fixed;
     top: 0;
@@ -66,7 +77,7 @@ body.dark{
     height: 50px;
     list-style: none;
     display: flex;
-    align-items: center;
+    align-items: left;
     margin-top: 10px;
 }
 
@@ -81,8 +92,8 @@ body.dark{
     border-radius: 6px;
     height: 100%;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: left;
+    justify-content: left;
     font-size: 20px;
 }
 
@@ -98,6 +109,17 @@ body.dark{
     white-space: nowrap;
     opacity: 1;
 }
+
+.text {
+    align-items: left!important;
+    justify-content: left!important;
+    margin-left: -20px;
+}
+
+.donkerlicht {
+    margin-left: -25%!important;
+}
+
 .sidebar.close .text{
     opacity: 0;
 }
@@ -163,9 +185,6 @@ body.dark .sidebar header .toggle{
     transform: translateY(-50%) rotate(0deg);
 }
 
-#kanker {
-    left: 1000px;
-}
 
 .sidebar .menu{
     margin-top: 40px;
@@ -195,7 +214,7 @@ body.dark .sidebar header .toggle{
     height: 100%;
     background-color: transparent;
     display: flex;
-    align-items: center;
+    align-items: left;
     height: 100%;
     width: 100%;
     border-radius: 6px;
@@ -256,8 +275,8 @@ body.dark .mode .sun-moon i.moon{
     height: 100%;
     min-width: 60px;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: left;
+    justify-content: left;
     border-radius: 6px;
     cursor: pointer;
 }
