--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,11 @@ body.dark{
     background-color: #141414;
 }
 
+
+.h1, .h2, .h3, .h4, .h5 {
+    color: var(--text-color)!important;
+}
+
 .profile-information.p {
     color:white!important ;
 }
