--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,11 @@ body.dark{
 }
 
 
-.h1, .h2, .h3, .h4, .h5 {
+p, strong, .titelgroot, .report-title, .labeltekst {
+    color: var(--text-color)!important;
+}
+
+.h1, .h2, .h4, .h5 {
     color: var(--text-color)!important;
 }
 
