--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,22 +16,31 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover, 
 input:-webkit-autofill:focus, 
 input:-webkit-autofill:active{
-    -webkit-box-shadow: 0 0 0 30px white inset !important;
+    -webkit-box-shadow: 0 0 0 30px rgb(255, 255, 255) inset !important;
+    background-color: #2a3136!important;
+    color: black;
 }
 
 input:-webkit-autofill{
-    -webkit-text-fill-color: yellow !important;
+    -webkit-text-fill-color: rgb(255, 255, 255) !important;
 }
+
+.form-control:focus{
+    color: white;
+    background: rgba(0,0,0,.25);
+}
+
 .form-control{
     display: block;
-    width: 150px;
-    margin: 0 0 20px;
-    padding: 8px 0 10px 0;
     text-align: center;
-    border: 1px solid rgba(0,0,0,.5);
-    background: rgba(0,0,0,.25);
+    border: 1px solid rgba(65, 65, 65, 0.5);
+    background: rgba(0, 0, 0, 0);
   }
 
+.form-control.select{
+    background: rgba(0, 0, 0, 0.02);
+
+}
 
 .profilepicpro {
     border-radius: 20px;
