--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,8 +17,8 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus, 
 input:-webkit-autofill:active{
     -webkit-box-shadow: 0 0 0 30px rgba(0, 0, 0, 0) inset !important;
-    background-color: #2a3136!important;
-    color: white;
+    background: rgba(0, 0, 0, 0)!important;
+    color: var(--text-color);
 }
 
 
@@ -27,7 +27,7 @@ input:-webkit-autofill:active{
 }
 
 .fr-toolbar {
-    background: rgba(0, 0, 0, 0)!important;
+    background: rgba(0, 0, 0, 0.356)!important;
 }
 
 .fr-wrapper:before{
