--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,8 +17,9 @@ input:-webkit-autofill:hover,
 input:-webkit-autofill:focus, 
 input:-webkit-autofill:active{
     -webkit-box-shadow: 0 0 0 30px rgba(0, 0, 0, 0) inset !important;
+    box-shadow: white;
     background: rgba(0, 0, 0, 0)!important;
-    color: var(--text-color);
+    color: var(--text-color)!important;
 }
 
 
@@ -27,7 +28,7 @@ input:-webkit-autofill:active{
 }
 
 .fr-toolbar {
-    background: rgba(0, 0, 0, 0.356)!important;
+    background: rgba(0, 0, 0, 0)!important;
 }
 
 .fr-wrapper:before{
@@ -39,9 +40,6 @@ input:-webkit-autofill:active{
     background: rgba(0, 0, 0, 0)!important;
 }
 
-input:-webkit-autofill{
-    -webkit-text-fill-color: rgb(0, 0, 0) !important;
-}
 
 .form-control:focus{
     color: white;
@@ -52,7 +50,8 @@ input:-webkit-autofill{
     display: block;
     text-align: center;
     border: 1px solid rgba(65, 65, 65, 0.5);
-    background: rgba(0, 0, 0, 0);
+    background-color: rgba(0, 0, 0, 0);
+
   }
 
 .form-control.select{
